Ajuste Numeración de Premios

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -115,7 +115,7 @@
                             <img class="img-premio-1" src="assets/images/PrimerLugar.png" alt="Primer Lugar">
                         </div>
                         <div class="text-premios">
-                            <h2>1° LUGAR</h2>
+                            <h2>1er LUGAR</h2>
                             <h4>Una Experiencia Jurásica</h4>
                             <p>Un viaje para 4 personas (2 adultos y 2 niños) a Costa Rica por 4 noches.</p>
                         </div>
@@ -129,7 +129,7 @@
                             <img class="img-premio-2" src="assets/images/premios-final-2-lugar.png" alt="Segundo Lugar">
                         </div>
                         <div class="text-premios">
-                            <h2>2° LUGAR</h2>
+                            <h2>2do LUGAR</h2>
                             <p>Una camioneta Xpander Mitsubishi, Modelo 2022.</p>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
                             <img class="img-premio-3" src="assets/images/TercerLugar.png" alt="Tercer Lugar">
                         </div>
                         <div class="text-premios">
-                            <h2>3° LUGAR</h2>
+                            <h2>3er LUGAR</h2>
                             <p>Un automóvil Mirage G4, modelo 2022.</p>
                         </div>
                     </div>
@@ -176,7 +176,7 @@
                             <img class="img-premio-1" src="assets/images/primerLugarSemanal.png" alt="Primer Lugar">
                         </div>
                         <div class="text-premios">
-                            <h2>1° LUGAR SEMANAL</h2>
+                            <h2>1er LUGAR SEMANAL</h2>
                             <h4>Un Kit Jurásico:</h4>
                             <p>Que contiene: Un juego de mesa, dos figuras, una gorra y una playera de la película.</p>
                         </div>
@@ -190,7 +190,7 @@
                             <img class="img-premio-2" src="assets/images/segundoLugarSemanal.png" alt="Segundo Lugar">
                         </div>
                         <div class="text-premios">
-                            <h2>2° LUGAR SEMANAL</h2>
+                            <h2>2do LUGAR SEMANAL</h2>
                             <h4>Un kit Jurásico</h4>
                             <p>Que contiene: Dos figuras, una gorra y una playera de la película.</p>
                         </div>
@@ -204,7 +204,7 @@
                             <img class="img-premio-3" src="assets/images/tercerLugarSemanal.png" alt="Tercer Lugar">
                         </div>
                         <div class="text-premios">
-                            <h2>3° LUGAR SEMANAL</h2>
+                            <h2>3er LUGAR SEMANAL</h2>
                             <h4>Un kit Jurásico</h4>
                             <p>Que contiene: Dos figuras de la película.</p>
                         </div>
@@ -218,7 +218,7 @@
                             <img class="img-premio-1" src="assets/images/cuartoLugarSemanal.png" alt="Cuarto Lugar">
                         </div>
                         <div class="text-premios">
-                            <h2>4° LUGAR SEMANAL</h2>
+                            <h2>4to LUGAR SEMANAL</h2>
                             <h4>Un kit Jurásico</h4>
                             <p>Que contiene: Una gorra y una playera de la película.</p>
                         </div>
