--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -274,7 +274,7 @@
 
 
                     <!--Descomentar este codigo cuando tengamos lista de ganadores-->
-                    <!-- <table>
+                    <table>
                         <thead>
                             <tr>
                                 <th colspan="2">GANADORES SEMANA 3</th>
@@ -285,23 +285,23 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>...</td>
-                                <td>1° Lugar Semanal</td>
+                                <td>Eduardo Pacheco</td>
+                                <td class="text-right">1er Lugar Semanal</td>
                             </tr>
                             <tr>
-                                <td>...</td>
-                                <td>2° Lugar Semanal</td>
+                                <td>Hermila Islas Garcia</td>
+                                <td class="text-right">2do Lugar Semanal</td>
                             </tr>
                             <tr>
-                                <td>...</td>
-                                <td>3° Lugar Semanal</td>
+                                <td>Abigail Solís Carrillo</td>
+                                <td class="text-right">3er Lugar Semanal</td>
                             </tr>
                             <tr>
-                                <td>...</td>
-                                <td>4° Lugar Semanal</td>
+                                <td>Mayte Berenice paz cortes</td>
+                                <td class="text-right">4to Lugar Semanal</td>
                             </tr>
                         </tbody>
-                    </table> -->
+                    </table>
 
 
 
