--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -269,11 +269,38 @@
                         </thead>
                     </table> -->
 
-
-
-
-
                     <!--Descomentar este codigo cuando tengamos lista de ganadores-->
+                    <table>
+                        <thead>
+                            <tr>
+                                <th colspan="2">GANADORES SEMANA 4</th>
+                            </tr>
+                            <tr>
+                                <th colspan="2" class="linea"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Jessica Abigail</td>
+                                <td class="text-right">1er Lugar Semanal</td>
+                            </tr>
+                            <tr>
+                                <td>Dany Hernández de la Cruz</td>
+                                <td class="text-right">2do Lugar Semanal</td>
+                            </tr>
+                            <tr>
+                                <td>Jonathan Ramos Islas</td>
+                                <td class="text-right">3er Lugar Semanal</td>
+                            </tr>
+                            <tr>
+                                <td>José de Jesús Gutiérrez Ramírez</td>
+                                <td class="text-right">4to Lugar Semanal</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+
+
                     <table>
                         <thead>
                             <tr>
