Ajuste Ganadores Semana 4

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -281,19 +281,19 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Jessica Abigail</td>
+                                <td>María De Los Angeles Hernandez Cervantes</td>
                                 <td class="text-right">1er Lugar Semanal</td>
                             </tr>
                             <tr>
-                                <td>Dany Hernández de la Cruz</td>
+                                <td>Maria Fernanda Santos Martinez</td>
                                 <td class="text-right">2do Lugar Semanal</td>
                             </tr>
                             <tr>
-                                <td>Jonathan Ramos Islas</td>
+                                <td>Gabriel Yamil Mojarro Guzmán</td>
                                 <td class="text-right">3er Lugar Semanal</td>
                             </tr>
                             <tr>
-                                <td>José de Jesús Gutiérrez Ramírez</td>
+                                <td>Ricardo Hernandez Marques</td>
                                 <td class="text-right">4to Lugar Semanal</td>
                             </tr>
                         </tbody>
