--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -273,6 +273,35 @@
                     <table>
                         <thead>
                             <tr>
+                                <th colspan="2">GANADORES SEMANA 5</th>
+                            </tr>
+                            <tr>
+                                <th colspan="2" class="linea"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Ma Del Rocio Medina De Mendez</td>
+                                <td class="text-right">1er Lugar Semanal</td>
+                            </tr>
+                            <tr>
+                                <td>Isai Ramirez Rodriguez</td>
+                                <td class="text-right">2do Lugar Semanal</td>
+                            </tr>
+                            <tr>
+                                <td>Van Josepht Peralta Villanueva</td>
+                                <td class="text-right">3er Lugar Semanal</td>
+                            </tr>
+                            <tr>
+                                <td>Carolina Abadía Aguilar</td>
+                                <td class="text-right">4to Lugar Semanal</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <table>
+                        <thead>
+                            <tr>
                                 <th colspan="2">GANADORES SEMANA 4</th>
                             </tr>
                             <tr>
