--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -270,6 +270,38 @@
                     </table> -->
 
                     <!--Descomentar este codigo cuando tengamos lista de ganadores-->
+
+                    <table>
+                        <thead>
+                            <tr>
+                                <th colspan="2">GANADORES SEMANA 6</th>
+                            </tr>
+                            <tr>
+                                <th colspan="2" class="linea"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Oscar Leon De Luna</td>
+                                <td class="text-right">1er Lugar Semanal</td>
+                            </tr>
+                            <tr>
+                                <td>Raúl Adolfo Sanchez Enriquez</td>
+                                <td class="text-right">2do Lugar Semanal</td>
+                            </tr>
+                            <tr>
+                                <td>Luis Angel Jimenez Calvillo</td>
+                                <td class="text-right">3er Lugar Semanal</td>
+                            </tr>
+                            <tr>
+                                <td>Jonathan Chavez Fernandez</td>
+                                <td class="text-right">4to Lugar Semanal</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+
+
                     <table>
                         <thead>
                             <tr>
@@ -293,7 +325,7 @@
                                 <td class="text-right">3er Lugar Semanal</td>
                             </tr>
                             <tr>
-                                <td>Carolina Abadía Aguilar</td>
+                                <td>-Por Definir-</td>
                                 <td class="text-right">4to Lugar Semanal</td>
                             </tr>
                         </tbody>
