--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -274,6 +274,37 @@
                     <table>
                         <thead>
                             <tr>
+                                <th colspan="2">GANADORES SEMANA 7</th>
+                            </tr>
+                            <tr>
+                                <th colspan="2" class="linea"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Fabio Isaac Díaz Pérez</td>
+                                <td class="text-right">1er Lugar Semanal</td>
+                            </tr>
+                            <tr>
+                                <td>Valeria Mancilla Aguilar</td>
+                                <td class="text-right">2do Lugar Semanal</td>
+                            </tr>
+                            <tr>
+                                <td>Michele Gonzalez Galindo</td>
+                                <td class="text-right">3er Lugar Semanal</td>
+                            </tr>
+                            <tr>
+                                <td>Pablo Salazar Lopez</td>
+                                <td class="text-right">4to Lugar Semanal</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+
+
+                    <table>
+                        <thead>
+                            <tr>
                                 <th colspan="2">GANADORES SEMANA 6</th>
                             </tr>
                             <tr>
