--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -274,6 +274,31 @@
                     <table>
                         <thead>
                             <tr>
+                                <th colspan="2">GANADORES FINALES</th>
+                            </tr>
+                            <tr>
+                                <th colspan="2" class="linea"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>José de Jesús Gutiérrez Ramírez</td>
+                                <td class="text-right">1er Lugar - Viaje</td>
+                            </tr>
+                            <tr>
+                                <td>Laura Martinez Garcia</td>
+                                <td class="text-right">2do Lugar - Camioneta</td>
+                            </tr>
+                            <tr>
+                                <td>María De Los Angeles Hernandez Cervantes</td>
+                                <td class="text-right">3er Lugar - Automóvil</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <table>
+                        <thead>
+                            <tr>
                                 <th colspan="2">GANADORES SEMANA 7</th>
                             </tr>
                             <tr>
